# oadrive

./: .gitignore  CMakeLists.txt  Dependencies.conf  Doxyfile  LICENSE  LICENSE.txt  README.md  howToCalibration.odt  oadrive-config.cmake.in  package.xml  redisclientConfig.cmake
config/: Driver.yml  EnvironmentPainter.yml  General.yml  Kuer.yml  Magic.yml  Map.yml  MissionControl.yml  ObjectDetector.yml  ObjectTracker.yml  USSensors.yml  US_CalPoints.yml  log.xml  roadsign.yml
config/Alpacacino/: BirdviewCal.yml
config/Alpacalypse/: BirdviewCal.yml  BirdviewCal_smaller.yml  precontrol.yml
config/Goffin/: BirdviewCal.yml  DepthRef.yml  precontrol.yml
config/Inka/: BirdviewCal.yml  DepthRef.yml  calUs.yml  precontrol.yml
config/Simu/: BirdviewCal.yml  precontrol.yml
config/normal/: MissionControl.yml  USSensors.yml
config/trajectories/:  cross_right_0.txt  backup_obstacle_0.txt  circle1_5m.txt  circle1m.txt  circle2m.txt  cross_left_0.txt  cross_right_0.txt  cross_straight_0.txt  forward_3m.txt  forward_small_0.txt  halfcircle2m_0.txt  middle_0.txt  park_cross_0.txt  park_cross_1.txt  park_cross_2.txt  park_parallel_0.txt  park_parallel_1.txt  park_parallel_2.txt  park_parallel_3.txt  park_parallel_4.txt  park_parallel_5.txt  pullout_cross_left_0.txt  pullout_cross_right_0.txt  pullout_cross_right_1.txt  pullout_parallel_0.txt  pullout_parallel_1.txt  pullout_parallel_2.txt  pullout_parallel_3.txt  turn_fast_0.txt  turn_fast_1.txt  turn_slow_0.txt  turn_slow_1.txt  turn_slow_2.txt  turn_slow_3.txt  turn_slow_4.txt  turn_slow_5.txt  turn_slow_6.txt
etc/: test_oadrive_interface.rviz
src/oadrive_control/: CMakeLists.txt  DriverModule.cpp  DriverModule.h  LateralController.cpp  LateralController.h  RampUSController.cpp  RampUSController.h  SpeedController.cpp  SpeedController.h  controlLogging.cpp  controlLogging.h
src/oadrive_core/: #ExtendedPose2d.h#  CMakeLists.txt  Event.h  ExtendedPose2d.cpp  ExtendedPose2d.h  ImportExport.h  Interpolator.cpp  Interpolator.h  Logging.cpp  Logging.h  MathFunctions.h  Pose.h  QuaternionFunctions.h  Trajectory2d.cpp  Trajectory2d.h  TrajectoryVelocityInterpolator.cpp  TrajectoryVelocityInterpolator.h  Types.h  Utility.h  VelocityCurve.cpp  VelocityCurve.h
src/oadrive_interface/: CMakeLists.txt  Interface.cpp  Interface.h  interfaceLogging.cpp  interfaceLogging.h
src/oadrive_lanedetection/: CMakeLists.txt  DebugViewRoadPerception.cpp  DebugViewRoadPerception.h  HaarFeature.cpp  HaarFeature.h  HaarFeatureEvaluation.cpp  HaarFeatureEvaluation.h  HaarFilter.cpp  HaarFilter.h  IntegralImage.cpp  IntegralImage.h  Line.cpp  Line.h  StreetPatcher.cpp  StreetPatcher.h  StreetTypes.h  lanedetectionLogging.cpp  lanedetectionLogging.h
src/oadrive_lanefollower/: CMakeLists.txt  LaneFollower.cpp  LaneFollower.h
src/oadrive_missioncontrol/: CMakeLists.txt  DebugControl4MC.cpp  DebugControl4MC.h  IControl4MC.h  IMC2Man.h  IManeuverList.h  ManeuverList.cpp  ManeuverList.h  ManeuverListLive.cpp  ManeuverListLive.h  MissionControl.cpp  MissionControl.h  MissionControlEnums.h  StateMachine.h  juryEnums.h  mcLogging.cpp  mcLogging.h
src/oadrive_obstacle/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  ObjectDetector.cpp  ObjectDetector.h  ObjectTracker.cpp  ObjectTracker.h  ProcessDepth.cpp  ProcessDepth.h  ProcessSensors.cpp  ProcessSensors.h  ProcessUS.cpp  ProcessUS.h  obstacleLogging.cpp  obstacleLogging.h
src/oadrive_trafficsign/: CMakeLists.txt  TrafficSignDetAruco.cpp  TrafficSignDetAruco.h  TrafficSignDetector.h  trafficSignLogging.cpp  trafficSignLogging.h
src/oadrive_util/: BirdViewConverter.cpp  BirdViewConverter.h  Broker.cpp  Broker.h  CMakeLists.txt  CameraCalibration.cpp  CameraCalibration.h  Config.cpp  Config.h  CoordinateConverter.cpp  CoordinateConverter.h  ImageHelper.cpp  ImageHelper.h  InitLogger.cpp  InitLogger.h  Navigator.cpp  Navigator.h  Timer.cpp  Timer.h  TimerEventListener.h  TimerTypes.h  utilLogging.cpp  utilLogging.h
src/oadrive_world/: CMakeLists.txt  EnvObject.cpp  EnvObject.h  Environment.cpp  Environment.h  EnvironmentPainter.cpp  EnvironmentPainter.h  EventRegion.cpp  EventRegion.h  MultiTrajectory.h  Obstacle.cpp  Obstacle.h  Patch.cpp  Patch.h  PatchStitcher.cpp  PatchStitcher.h  Road.cpp  Road.h  StateMachine.cpp  StateMachine.h  TrafficSign.cpp  TrafficSign.h  TrajectoryDatabase.cpp  TrajectoryDatabase.h  TrajectoryFactory.cpp  TrajectoryFactory.h  WorldEventListener.h  aadc_roadSign_enums.h  worldLogging.cpp  worldLogging.h
src/ros/: CMakeLists.txt  test_oadrive_interface_ros.cpp
src/test/: 151217BirdviewCal_lowRes2.yml  CMakeLists.txt  Maneuverlist.xml  Maneuverlist_bad.xml  Maneuverlist_bad2.xml  test_oadrive_birdViewCal.cpp  test_oadrive_core_trajectory.cpp  test_oadrive_core_velocity_interpolator.cpp  test_oadrive_drivermodule.cpp  test_oadrive_haarfilter.cpp  test_oadrive_interface.cpp  test_oadrive_lanedetection.cpp  test_oadrive_trajectoryGeneration.cpp
(+59 files in other folders)
